--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.gms:google-services:4.2.0'
 
 
@@ -21,7 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven{
+            url "https://maven.google.com"
+        }
     }
 }
 
